# Al-Marjaa-Libraries

./: .gitignore  Cargo.toml  README.md
libs/ai/: Cargo.toml
libs/ai/src/: arabic_nlp.rs  gguf_inference.rs  inference.rs  lib.rs  local_engine.rs  real_inference.rs  smart_model_manager.rs  unified_vibe.rs  vibe_advanced.rs
libs/ai/src/pipeline/: engine.rs  mod.rs
libs/database/: Cargo.toml
libs/database/src/: connection.rs  lib.rs  mongodb.rs  mysql.rs  pool.rs  postgres.rs  query.rs  sqlite.rs
libs/gpu/: Cargo.toml
libs/gpu/src/: lib.rs
libs/industrial/: Cargo.toml
libs/industrial/src/: lib.rs
libs/industrial/src/alarms/: mod.rs
libs/industrial/src/drivers/: mod.rs
libs/industrial/src/hmi/: mod.rs
libs/industrial/src/modbus/: mod.rs
libs/industrial/src/mqtt/: mod.rs
libs/industrial/src/scada/: mod.rs
libs/network/: Cargo.toml
libs/network/src/: lib.rs
libs/onnx/: Cargo.toml
libs/onnx/src/: engine.rs  export.rs  inference.rs  lib.rs  operators.rs  runtime.rs  types.rs  utils.rs
