[workspace]
members = ["libs/ai", "libs/database", "libs/network", "libs/onnx", "libs/gpu", "libs/industrial"]
resolver = "2"

[workspace.package]
version = "3.4.0"
edition = "2021"
authors = ["رضوان دالي حمدوني <almarjaa.project@hotmail.com>"]
license = "All Rights Reserved"
repository = "https://github.com/radhwendalyhamdouni/Al-Marjaa-Libraries"

[workspace.dependencies]
# يمكن إضافة almarjaa-core عند الحاجة للتكامل
# almarjaa = { git = "https://github.com/radhwendalyhamdouni/Al-Marjaa-Core" }
