[package]
name = "almarjaa-database"
version = "3.4.0"
edition = "2021"
authors = ["رضوان دالي حمدوني <almarjaa.project@hotmail.com>"]
description = "مكتبة قواعد البيانات للغة المرجع - دعم SQLite, MySQL, PostgreSQL, MongoDB"
license = "All Rights Reserved"
repository = "https://github.com/radhwendalyhamdouni/Al-Marjaa-Libraries"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# التسلسل
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# قواعد البيانات
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], optional = true }

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"], optional = true }

# أدوات إضافية
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

[features]
default = []
full = ["rusqlite", "sqlx", "tokio"]
sqlite = ["rusqlite"]
async-db = ["sqlx", "tokio"]
