[package]
name = "almarjaa-onnx"
version = "3.4.0"
edition = "2021"
authors = ["رضوان دالي حمدوني <almarjaa.project@hotmail.com>"]
description = "مكتبة ONNX للغة المرجع - دعم نماذج Open Neural Network Exchange"
license = "All Rights Reserved"
repository = "https://github.com/radhwendalyhamdouni/Al-Marjaa-Libraries"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# التسلسل
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ONNX Runtime
ort = { version = "2.0.0-rc.12", optional = true }
ndarray = "0.15"

# ضغط الملفات
zip = { version = "0.6", optional = true }

# أدوات إضافية
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
full = ["ort", "zip"]
runtime = ["ort"]
